# cargo-binutils

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: bors.toml
.github/workflows/: ci.yml  release.yml  rust.json
ci/: before-deploy.sh  install.sh  script.sh
src/: cargo.rs  config.rs  lib.rs  llvm.rs  postprocess.rs  rustc.rs  tool.rs  util.rs
