[package]
edition = "2018"
authors = [
    "The Embedded WG Tools Team <tools@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["command-line-utilities", "development-tools"]
description = "Proxy for LLVM tools like llvm-nm, llvm-objdump and llvm-size"
documentation = "https://github.com/rust-embedded/cargo-binutils#cargo-binutils"
keywords = ["llvm", "size", "objdump", "nm"]
license = "MIT OR Apache-2.0"
name = "cargo-binutils"
readme = "README.md"
repository = "https://github.com/rust-embedded/cargo-binutils/"
version = "0.3.3"

[dependencies]
cargo_metadata = "0.11"
clap = "2.33"
lazy_static = "1.4"
regex = "1.3"
rustc-cfg = "0.4"
rustc-demangle = "0.1"
rustc_version = "0.2"
serde = "1.0"
toml = "0.5"
anyhow = "1.0"
